force-app/main/default/objects/BB_Entitlement__c/BB_Entitlement__c.object-meta.xml
<CustomObject>
    <description>A Salesforce entitlement Blackbaud owns, from the asset line items. Grounds the agent on "what do we already own".</description>
    <label>BB Entitlement</label>
    <pluralLabel>BB Entitlements</pluralLabel>
    <nameField><label>Entitlement Key</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>