force-app/main/default/objects/BB_Entitlement__c/fields/As_Of__c.field-meta.xml
<CustomField>
    <fullName>As_Of__c</fullName>
    <description>As-of date of the entitlement read (point-in-time, not a contract).</description>
    <label>As Of</label><type>Text</type><length>40</length><unique>false</unique>
</CustomField>