force-app/main/default/objects/BB_Entitlement__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <description>Near-term term end (text, e.g. "~Jan 2027"); null when not near-term.</description>
    <label>Expiry</label><length>40</length><type>Text</type><unique>false</unique>
</CustomField>