force-app/main/default/objects/BB_Entitlement__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName><externalId>true</externalId>
    <description>OWNED_PRODUCTS key from entitlements.js; upsert key.</description>
    <label>External Id</label><length>80</length><required>true</required><type>Text</type><unique>true</unique>
</CustomField>