force-app/main/default/objects/BB_Entitlement__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Actual owned products / SKUs / asset line items.</description>
    <label>Products</label><length>2000</length><type>LongTextArea</type><visibleLines>4</visibleLines>
</CustomField>