force-app/main/default/objects/BB_Entitlement__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the entitlement read came from.</description>
    <label>Source</label><length>255</length><type>Text</type><unique>false</unique>
</CustomField>