force-app/main/default/objects/BB_Entitlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Entitlement status.</description>
    <label>Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>owned</fullName><default>false</default><label>Licensed</label></value>
        <value><fullName>owned-expiring</fullName><default>false</default><label>Licensed - expiring</label></value>
        <value><fullName>separate-agreement</fullName><default>false</default><label>Separate agreement</label></value>
    </valueSetDefinition></valueSet>
</CustomField>